// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFlyout is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-label="aria-label"
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge testClass1 testClass2"
        data-test-subj="test subject string"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props accepts div props 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        id="imaflyout"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props closeButtonPosition can be outside 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props closeButtonProps 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="aria-label"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside testClass1 testClass2"
          data-test-subj="test subject string"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props hideCloseButton 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props is rendered as nav 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props maxWidth can be set to a custom number 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        style="max-width: 1024px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props maxWidth can be set to a custom value and measurement 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        style="max-width: 24rem;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props maxWidth can be set to a default 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge ouiFlyout--maxWidth-default"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props outsideClickCloses 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props ownFocus can alter mask props with maskProps without throwing error 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props ownFocus can be false 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
      role="dialog"
      tabindex="-1"
    >
      <button
        aria-label="Close this dialog"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
        data-test-subj="ouiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="cross"
        />
      </button>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`OuiFlyout props paddingSize l is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props paddingSize m is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingMedium"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props paddingSize none is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingNone"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props paddingSize s is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingSmall"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props role can be removed 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props sides left is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--left ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props sides right is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props size accepts custom number 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--paddingLarge"
        role="dialog"
        style="width: 500px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props size l is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--large ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props size m is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--medium ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props size s is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="ouiFlyout ouiFlyout--small ouiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiFlyout props type=push is rendered 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      class="ouiFlyout ouiFlyout--push ouiFlyout--medium ouiFlyout--paddingLarge"
      role="dialog"
      tabindex="-1"
    >
      <button
        aria-label="Close this dialog"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--inside"
        data-test-subj="ouiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="cross"
        />
      </button>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
]
`;
